# hyprland

./: CMakeLists.txt  README.md
components/base/: InteractiveBase.qml  ServiceBase.qml
components/controls/: IconButton.qml
modules/bar/: Bar.qml
modules/launcher/: Content.qml
services/: Audio.qml
utils/: Logger.qml
